# cyber-dashboard-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  Dockerfile.migrate  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
apps/cyber_dashboard_api/: .env.example  Dockerfile  Dockerfile.dev  LICENSE  README.md  pyproject.toml  requirements.txt
apps/cyber_dashboard_api/cyber_dashboard_api/: __init__.py  _runtime.py  main.py
apps/cyber_dashboard_api/cyber_dashboard_api/api/: dependencies.py  errors.py  router.py  validation.py
apps/cyber_dashboard_api/cyber_dashboard_api/config/: settings.py
apps/cyber_dashboard_api/cyber_dashboard_api/db/: __init__.py
apps/cyber_dashboard_api/cyber_dashboard_api/integrations/: __init__.py  common.py  http.py
apps/cyber_dashboard_api/cyber_dashboard_api/repositories/: __init__.py
apps/cyber_dashboard_api/cyber_dashboard_api/services/: __init__.py  alert_email_service.py  attacks_collector_config_service.py  cti_config_service.py  cti_enrichment_service.py  retention_policy_service.py  secret_service.py  sensor_type_service.py  smtp_config_service.py  smtp_email_service.py  source_service.py
apps/cyber_dashboard_api/cyber_dashboard_api/utils/: logging.py
apps/cyber_dashboard_api/docs/: CTI.md  api_doc.md  conventions.md  testing.md
apps/cyber_dashboard_api/scripts/: test_localhost_routes.py
apps/cyber_dashboard_api/src/cyber_dashboard_api/: __init__.py  main.py
apps/cyber_dashboard_api/tests/: __init__.py  common.py  test_all.py  test_errors.py
apps/cyber_dashboard_api/tests/alerts/: __init__.py  test_all.py  test_routes.py  test_service.py
apps/cyber_dashboard_api/tests/attacks/: __init__.py  test_all.py  test_route.py
apps/cyber_dashboard_api/tests/attacks_collector_config/: __init__.py  helpers.py  test_activate_route.py  test_all.py  test_create_route.py  test_deactivate_route.py  test_delete_api_key_route.py  test_delete_email_route.py  test_delete_route.py  test_get_route.py  test_list_route.py  test_request_inventory_route.py  test_update_route.py
apps/cyber_dashboard_api/tests/cti_config/: __init__.py  test_all.py  test_greynoise_validator.py  test_ipinfo_validator.py  (+3 more)
apps/cyber_dashboard_common_ip/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/cyber_dashboard_common_ip/tests/: __init__.py  test_all.py  test_batch_processing_time_tracker.py  test_correlator.py  test_domain.py  test_postgres_integration.py  test_repositories.py
apps/cyber_dashboard_scheduler/: .env.example  Dockerfile  README.md  pyproject.toml
apps/cyber_dashboard_scheduler/tests/: __init__.py  test_smoke.py
(+298 files in other folders)
