[project]
name = "cyber-dashboard-backend"
version = "0.1.0"
description = "Ensemble d'applications et de packages pour le projet Cyber Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cyber-dashboard-database",
    "cyber-dashboard-common-tools",
]

[tool.uv.sources]
cyber-dashboard-database = { workspace = true }
cyber-dashboard-common-tools = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/cyber_dashboard_api",
    "apps/cyber_dashboard_scheduler",
    "apps/cyber_dashboard_common_ip",
    "packages/cyber_dashboard_database",
    "packages/cyber_dashboard_common_tools",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
