[project]
name = "cyber-dashboard-api"
version = "0.1.0"
description = "API REST qui communique avec une base de donnée."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "cyber-dashboard-database",
    "cyber-dashboard-common-tools",
]

[tool.uv.sources]
cyber-dashboard-database = { workspace = true }
cyber-dashboard-common-tools = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
